--- a/.github/workflows/flutter-dev.yml
+++ b/.github/workflows/flutter-dev.yml
@@ -31,3 +31,6 @@ jobs:
         with:
             name: dev-apk
             path: build/app/outputs/flutter-apk/app-dev-debug.apk
+            
+      - name: Check outdated dependencies
+        run: flutter pub outdated
